# wb_parser_lib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: validator_url_test.py  validator_wb_id_test.py  validator_wb_query_test.py
wb_parser/: __init__.py  config.py  parser.py  schemas.py
wb_parser/services/connection/: __init__.py  aiohttp_service.py  base.py  exceptions.py  schemas.py
wb_parser/services/url_parser/: __init__.py  base.py  v13.py
wb_parser/services/validator/: __init__.py  url.py  wb.py
